# dupast

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  build.rs  dupast.toml  synonyms.txt
src/: error.rs  main.rs
src/cli/: mod.rs
src/config/: mod.rs
src/engine/: mod.rs  token_engine.rs
src/output/: diagnostic.rs  mod.rs
src/parser/: mod.rs  synonym_graph.rs  token_freq.rs
