[package]
name = "dupast"
version = "0.2.0"
edition = "2024"
description = "Fast code duplication detector with Cargo-like ergonomics"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Blackjack200/dupast"
homepage = "https://github.com/Blackjack200/dupast"
readme = "README.md"
keywords = ["code-quality", "duplication", "static-analysis"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "dupast"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "color"] }
clap_complete = "4"

# Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
wincode = { version = "0", features = ["derive"] }

# Performance
rayon = "1"
dashmap = "6"

# Similarity
rustc-hash = "2"

# Output
indicatif = "0"
similar = "2"
owo-colors = "4"

# Error handling
thiserror = "2"

# Logging
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }

# Path handling
walkdir = "2"
dirs = "5"

# Language parsing
tree-sitter = "0"
tree-sitter-cpp = "0"
tree-sitter-java = "0.23.5"
tree-sitter-rust = "0.24.0"
tree-sitter-php = "0.24.2"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-c = "0.24.1"
tree-sitter-go = "0.25.0"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
wincode = { version = "0", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
